# LabChain

./: 404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/workflows/: test_on_push_pull.yml  update_docs.yml  upload_on_tag.yaml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
api/: index.html
api/base/base_dataset_manager/: index.html
api/base/base_factory/: index.html
api/base/base_filter/: index.html
api/base/base_map_reduce/: index.html
api/base/base_metric/: index.html
api/base/base_optimizer/: index.html
api/base/base_pipelines/: index.html
api/base/base_plugin/: index.html
api/base/base_splitter/: index.html
api/base/base_storage/: index.html
api/base/base_types/: index.html
api/base/exceptions/: index.html
api/container/container/: index.html
api/container/overload/: index.html
api/container/pet_class_manager/: index.html
api/container/pet_factory/: index.html
api/plugins/filters/cache/: index.html
api/plugins/filters/classification/: index.html
api/plugins/filters/clustering/: index.html
api/plugins/filters/grid_search/: index.html
api/plugins/filters/regression/: index.html
api/utils/pyspark/: index.html
api/utils/sklearn/: index.html
api/utils/typeguard/: index.html
api/utils/utils/: index.html
api/utils/wandb/: index.html
architecture/: index.html
best_practices/: index.html
docs/: index.md
docs/api/: index.md
docs/api/base/: base_dataset_manager.md  base_factory.md  base_filter.md  base_map_reduce.md  base_metric.md  base_optimizer.md  base_pipelines.md  base_plugin.md  base_splitter.md  base_storage.md  base_types.md  exceptions.md
docs/api/container/: container.md  overload.md  pet_class_manager.md  pet_factory.md
docs/api/utils/: pyspark.md  sklearn.md  typeguard.md  utils.md  wandb.md
docs/architecture/: index.md
docs/examples/: data_ingestion.md  index.md  simple_f3pipeline.md
docs/examples/notebooks/: caching_heavy_data.ipynb  data_ingestion.ipynb  f3pipeline_with_cache.ipynb  grid_search_optimizer_with_data_splitter_kfold.ipynb  optuna_optimizer_with_data_splitter_kfold.ipynb  research_deltas.ipynb  simple_custom_filter.ipynb  wandb_optimizer_with_data_splitter_kfold.ipynb
docs/installation/: index.md
docs/quick_start/: index.md
docs/remote_injection/: index.md
docs/start_caching/: index.md
examples/: index.html
examples/218e787b8bbdb20a93d03053ded7a097fb4bfe2e/: index.html
examples/data_ingestion/: index.html
examples/notebooks/caching_heavy_data/: index.html
examples/notebooks/data_ingestion/: index.html
examples/notebooks/f3pipeline_with_cache/: index.html
examples/notebooks/grid_search_optimizer_with_data_splitter_kfold/: index.html
examples/notebooks/optuna_optimizer_with_data_splitter_kfold/: index.html
examples/notebooks/research_deltas/: index.html
examples/notebooks/simple_custom_filter/: index.html
examples/notebooks/wandb_optimizer_with_data_splitter_kfold/: index.html
examples/simple_f3pipeline/: index.html
framework3/base/: base_clases.py
framework3/plugins/optimizer/: wandb_optimizer.py
framework3/plugins/splitter/: cross_validation_splitter.py  stratified_cross_validation_splitter.py
framework3/plugins/storage/: local_storage.py  s3_storage.py
installation/: index.html
labchain/base/: base_clases.py  base_factory.py  base_pipelines.py  base_splitter.py
labchain/container/: __init__.py  container.py
labchain/plugins/metrics/: classification.py
labchain/plugins/optimizer/: grid_optimizer.py  optuna_optimizer.py  wandb_optimizer.py
labchain/plugins/splitter/: cross_validation_splitter.py  stratified_cross_validation_splitter.py
labchain/plugins/storage/: local_storage.py  locking_local_storage.py  s3_storage.py
quick_start/: index.html
remote_injection/: index.html
search/: search_index.json
start_caching/: index.html
tests/integration/: test_cached_with_locking.py  test_cached_with_locking_heartbeat.py  test_complex_storage_patterns.py  test_e2e_persistence.py  test_end_to_end_locking.py  test_grid_search_optimizer.py  test_local_thread_map_reduce_pipeline.py  test_map_reduce_pipeline.py  test_optuna_optimizer.py  test_pipeline_integration.py  test_saving_torch_model.py  test_wandb_optimizer.py
tests/unit/: test_base_clases.py  test_cached_filter.py  test_combiner_pipeline.py  test_container.py  test_dataset_manager.py  test_filter_initialization.py  test_grid_search.py  test_gs_cv_pipeline.py  test_local_storage.py  test_locking_local_storage.py  test_locking_local_storage_heartbeat.py  test_locking_s3_storage.py  test_locking_s3_storage_heartbeat.py  test_pet_container.py  test_pet_container_advanced.py  test_pyspark.py  test_s3_storage.py  test_xydata_operations.py
(+54 files in other folders)
