[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "framework3"
version = "0.0.0"  # Esto será reemplazado dinámicamente
description = "A flexible framework for machine learning pipelines"
authors = ["Manuel Couto Pintos <manuel.couto.pintos@usc.es>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "labchain"},{include = "framework3"}]
keywords = [
    "Pipelines & Filters",
    "Research Framework",
    "Caching",
    "ML",
    "AI",
    "Experimentation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"

# Core dependencies
typeguard = "4.4.1"
multimethod = "1.12"
rich = "13.9.4"
cloudpickle = "3.1.0"
tqdm = "4.67.1"
dill = "0.3.9"

# Optional dependencies
pandas = { version = "2.2.3", optional = true }
scipy = { version = "1.13.1", optional = true }
scikit-learn = { version = "1.5.2", optional = true }
torch = { version = "2.6.0", optional = true }
transformers = { version = "4.51.1", optional = true }
sentence-transformers = { version = "4.0.2", optional = true }
nltk = { version = "3.9.1", optional = true }
gensim = { version = "4.3.3", optional = true }
wandb = { version = "0.19.9", optional = true }
optuna = { version = "4.2.1", optional = true }
pyspark = { version = "3.5.3", optional = true }
boto3 = { version = "1.42.10", optional = true }
fastapi = { version = "0.115.5", optional = true }
pytest = { version = "8.3.4", optional = true }
pytest-mock = { version = "3.15.1", optional = true }
pytest-cov = { version = "6.0.0", optional = true }
ruff = { version = "0.8.1", optional = true }
poetry-dynamic-versioning = { version = "0.21.1", optional = true }
ipykernel = { version = "6.29.5", optional = true }
moto = { version = "^5.0.22", optional = true }

[tool.poetry.extras]
data = ["pandas", "scipy", "scikit-learn"]
dl = ["torch", "transformers", "sentence-transformers"]
nlp = ["nltk", "gensim"]
tracking = ["wandb", "optuna"]
spark = ["pyspark"]
aws = ["boto3", "fastapi"]
dev = ["pytest", "pytest-mock", "pytest-cov", "ruff", "moto", "ipykernel", "poetry-dynamic-versioning"]



[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"  # Asegura que el formato sea compatible con PyPI (ej. 1.2.3)

[tool.poetry.urls]
Homepage = "https://github.com/manucouto1/framework3"
Documentation = "https://manucouto1.github.io/framework3/"
Repository = "https://github.com/manucouto1/framework3.git"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
enable_incomplete_feature = ["Unpack"]
